added functions for ExpectationValue and main vqe fraimwork

--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -11,7 +11,39 @@
     "from qiskit import Aer\n",
     "import numpy as np\n",
     "\n",
-    "def VQE(numberOfQubits, theta, epsilon):\n",
+    "#function to change bool String to integer\n",
+    "def boolStringToInt(array):\n",
+    "    integer = 0\n",
+    "    for i in range(len(array)):\n",
+    "        if (array[i] == \"1\"):\n",
+    "            integer += 2^i\n",
+    "    return integer\n",
+    "\n",
+    "#Measeurement algorithm for energy\n",
+    "def measureExpectationValue(array, standardError):\n",
+    "    totalH = 0.00\n",
+    "    counter = 0\n",
+    "\n",
+    "    #simulation of measurement results\n",
+    "    measurement = ClassicalRegister(numberOfQubits)\n",
+    "    circuit.measure(input, measurement)\n",
+    "    simulator = Aer.get_backend('aer_simulator')\n",
+    "\n",
+    "    #runs 1/standard error squared times for standard error given\n",
+    "    simulation = execute(circuit, simulator, shots=(1/standardError)^2)\n",
+    "    mresult = simulation.result()\n",
+    "    counts = mresult.get_counts(circuit)\n",
+    "    for(measured_state, count) in counts.items():\n",
+    "        counter += count\n",
+    "        intM = boolStringToInt(measured_state)\n",
+    "        totalH += intM * count\n",
+    "    #Find expectationValue for given set of Pauli Strings for energies                \n",
+    "    expectationValue = totalH / counter   \n",
+    "    return expectationValue \n",
+    "\n",
+    "\n",
+    "\n",
+    "def VQE(numberOfQubits, theta, standardError):\n",
     "\n",
     "    #theta is an initial angle\n",
     "    #epsilon is target standard error \n",
@@ -36,26 +68,14 @@
     "            #entangled anzatz states preparation\n",
     "            for k in range(len(register) - 1):\n",
     "                circuit.cx(register[k], register[k+1])\n",
-    "                \n",
-    "            #Measeurement algorithm for energy\n",
-    "            # measurement = ClassicalRegister(numberOfQubits)\n",
-    "            # circuit.measure(input, measurement)\n",
-    "            # simulator = Aer.get_backend('aer_simulator')\n",
-    "            # simulation = execute(circuit, simulator, shots=(1/epsilon)^2)\n",
-    "            # mresult = simulation.result()\n",
-    "            # counts = mresult.get_counts(circuit)\n",
-    "            # for(measured_state, count) in counts.items():\n",
-    "            #     for i in measured_state:\n",
-    "                    \n",
-    "            numberOfIterations += 1\n",
-    "            #totalH += Measurement\n",
-    "            expectationValue = totalH / numberOfIterations\n",
+    "            \n",
+    "            #measurement and pauli strings rotation\n",
+    "\n",
+    "        #Expectation value for pauli strings???\n",
+    "        expectationValue = measureExpectationValue(PauliStrings, standardError)\n",
     "        thetaH[theta] = expectationValue\n",
     "        #find newtheta from optimizer\n",
-    "    return thetaH\n",
-    "      \n",
-    "    \n",
-    "\n"
+    "    return thetaH\n"
    ]
   }
  ],
