--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -20,12 +20,12 @@
     "    return integer\n",
     "\n",
     "#Measeurement algorithm for energy\n",
-    "def measureExpectationValue(array, standardError):\n",
+    "def measureExpectationValue(array, standardError, circuit):\n",
     "    totalH = 0.00\n",
     "    counter = 0\n",
     "\n",
     "    #simulation of measurement results\n",
-    "    measurement = ClassicalRegister(numberOfQubits)\n",
+    "    measurement = ClassicalRegister(len(array))\n",
     "    circuit.measure(input, measurement)\n",
     "    simulator = Aer.get_backend('aer_simulator')\n",
     "\n",
@@ -72,7 +72,7 @@
     "            #measurement and pauli strings rotation\n",
     "\n",
     "        #Expectation value for pauli strings???\n",
-    "        expectationValue = measureExpectationValue(PauliStrings, standardError)\n",
+    "        expectationValue = measureExpectationValue(PauliStrings, standardError, circuit)\n",
     "        thetaH[theta] = expectationValue\n",
     "        #find newtheta from optimizer\n",
     "    return thetaH\n"
