editing testing and quantumstuff

--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -11,6 +11,7 @@
     "from qiskit import Aer\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "#function to change bool String to integer\n",
     "def boolStringToInt(array):\n",
     "    integer = 0\n",
@@ -20,12 +21,12 @@
     "    return integer\n",
     "\n",
     "#Measeurement algorithm for energy\n",
-    "def measureExpectationValue(array, standardError):\n",
+    "def measureExpectationValue(array, standardError, circuit):\n",
     "    totalH = 0.00\n",
     "    counter = 0\n",
     "\n",
     "    #simulation of measurement results\n",
-    "    measurement = ClassicalRegister(numberOfQubits)\n",
+    "    measurement = ClassicalRegister(len(array))\n",
     "    circuit.measure(input, measurement)\n",
     "    simulator = Aer.get_backend('aer_simulator')\n",
     "\n",
@@ -37,9 +38,9 @@
     "        counter += count\n",
     "        intM = boolStringToInt(measured_state)\n",
     "        totalH += intM * count\n",
-    "    #Find expectationValue for given set of Pauli Strings for energies                \n",
-    "    expectationValue = totalH / counter   \n",
-    "    return expectationValue \n",
+    "    #Find expectationValue for given set of Pauli Strings for energies\n",
+    "    expectationValue = totalH / counter\n",
+    "    return expectationValue\n",
     "\n",
     "\n",
     "\n",
