added func to measure expectation val effeciently

--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -2,16 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
     "from qiskit import execute\n",
     "from qiskit import Aer\n",
+    "from qiskit.utils import QuantumInstance\n",
+    "from qiskit.opflow import PauliExpectation, CircuitSampler, StateFn, X, Y, Z, I, CircuitStateFn \n",
     "import numpy as np\n",
     "\n",
-    "def VQE(numberOfQubits, theta, epsilon):\n",
+    "#function to change bool String to integer\n",
+    "def boolStringToInt(array):\n",
+    "    integer = 0\n",
+    "    for i in range(len(array)):\n",
+    "        if (array[i] == \"1\"):\n",
+    "            integer += 2^i\n",
+    "    return integer\n",
+    "\n",
+    "# Measures the expectation value more effeciently by grouping certain Paulis\n",
+    "def rotateAndMeasure(pauliOperator, stateFunc):\n",
+    "    # as of now, pauliOperator should be type PauliSumOp from qiskit\n",
+    "    # stateFunc is the circuit that represents ansatz\n",
+    "    \n",
+    "    op = pauliOperator\n",
+    "    state = stateFunc\n",
+    "    state = CircuitStateFn(state)\n",
+    "    \n",
+    "    backend = Aer.get_backend('qasm_simulator') \n",
+    "    qInstance = QuantumInstance(backend, shots=1024)\n",
+    "    measurableExp = StateFn(op, is_measurement=True).compose(state) \n",
+    "    \n",
+    "    expectationVal = PauliExpectation().convert(measurableExp)\n",
+    "    sampler = CircuitSampler(qInstance).convert(expectationVal) \n",
+    "    \n",
+    "    return sampler.eval().real  \n",
+    "\n",
+    "#Measeurement algorithm for energy\n",
+    "def measureExpectationValue(array, standardError, circuit):\n",
+    "    totalH = 0.00\n",
+    "    counter = 0\n",
+    "\n",
+    "    #simulation of measurement results\n",
+    "    measurement = ClassicalRegister(len(array))\n",
+    "    circuit.measure(input, measurement)\n",
+    "    simulator = Aer.get_backend('aer_simulator')\n",
+    "\n",
+    "    #runs 1/standard error squared times for standard error given\n",
+    "    simulation = execute(circuit, simulator, shots=(1/standardError)^2)\n",
+    "    mresult = simulation.result()\n",
+    "    counts = mresult.get_counts(circuit)\n",
+    "    for(measured_state, count) in counts.items():\n",
+    "        counter += count\n",
+    "        intM = boolStringToInt(measured_state)\n",
+    "        totalH += intM * count\n",
+    "    #Find expectationValue for given set of Pauli Strings for energies                \n",
+    "    expectationValue = totalH / counter   \n",
+    "    return expectationValue \n",
+    "\n",
+    "\n",
+    "\n",
+    "def VQE(numberOfQubits, theta, standardError):\n",
     "\n",
     "    #theta is an initial angle\n",
     "    #epsilon is target standard error \n",
@@ -36,43 +88,39 @@
     "            #entangled anzatz states preparation\n",
     "            for k in range(len(register) - 1):\n",
     "                circuit.cx(register[k], register[k+1])\n",
-    "                \n",
-    "            #Measeurement algorithm for energy\n",
-    "            # measurement = ClassicalRegister(numberOfQubits)\n",
-    "            # circuit.measure(input, measurement)\n",
-    "            # simulator = Aer.get_backend('aer_simulator')\n",
-    "            # simulation = execute(circuit, simulator, shots=(1/epsilon)^2)\n",
-    "            # mresult = simulation.result()\n",
-    "            # counts = mresult.get_counts(circuit)\n",
-    "            # for(measured_state, count) in counts.items():\n",
-    "            #     for i in measured_state:\n",
-    "                    \n",
-    "            numberOfIterations += 1\n",
-    "            #totalH += Measurement\n",
-    "            expectationValue = totalH / numberOfIterations\n",
+    "            \n",
+    "            #measurement and pauli strings rotation\n",
+    "\n",
+    "        #Expectation value for pauli strings???\n",
+    "        expectationValue = measureExpectationValue(PauliStrings, standardError, circuit)\n",
     "        thetaH[theta] = expectationValue\n",
     "        #find newtheta from optimizer\n",
-    "    return thetaH\n",
-    "      \n",
-    "    \n",
-    "\n"
+    "    return thetaH"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.10.4 ('qiskit')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9f0d103aebe82dfbb47ec724a2ca4fd3dcb0c9038207abb072b7913218171667"
+    "hash": "589fdf9d33fa67c297da1e975db83c64ff7368b293bf76e426616abd6fd87742"
    }
   }
  },
