--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
-    "from qiskit import execute\n",
-    "from qiskit import Aer\n",
+    "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister, execute, Aer\n",
     "from qiskit.utils import QuantumInstance\n",
     "from qiskit.opflow import PauliExpectation, CircuitSampler, StateFn, X, Y, Z, I, CircuitStateFn \n",
     "import numpy as np\n",
@@ -18,7 +16,7 @@
     "    integer = 0\n",
     "    for i in range(len(array)):\n",
     "        if (array[i] == \"1\"):\n",
-    "            integer += 2^i\n",
+    "            integer += 2**i\n",
     "    return integer\n",
     "\n",
     "# Measures the expectation value more effeciently by grouping certain Paulis\n",
@@ -39,31 +37,7 @@
     "    \n",
     "    return sampler.eval().real  \n",
     "\n",
-    "#Measeurement algorithm for energy\n",
-    "def measureExpectationValue(array, standardError, circuit):\n",
-    "    totalH = 0.00\n",
-    "    counter = 0\n",
-    "\n",
-    "    #simulation of measurement results\n",
-    "    measurement = ClassicalRegister(len(array))\n",
-    "    circuit.measure(input, measurement)\n",
-    "    simulator = Aer.get_backend('aer_simulator')\n",
-    "\n",
-    "    #runs 1/standard error squared times for standard error given\n",
-    "    simulation = execute(circuit, simulator, shots=(1/standardError)^2)\n",
-    "    mresult = simulation.result()\n",
-    "    counts = mresult.get_counts(circuit)\n",
-    "    for(measured_state, count) in counts.items():\n",
-    "        counter += count\n",
-    "        intM = boolStringToInt(measured_state)\n",
-    "        totalH += intM * count\n",
-    "    #Find expectationValue for given set of Pauli Strings for energies                \n",
-    "    expectationValue = totalH / counter   \n",
-    "    return expectationValue \n",
-    "\n",
-    "\n",
-    "\n",
-    "def VQE(numberOfQubits, theta, standardError):\n",
+    "def VQE(numberOfQubits, theta, standardError, pauliOperator):\n",
     "\n",
     "    #theta is an initial angle\n",
     "    #epsilon is target standard error \n",
@@ -89,13 +63,34 @@
     "            for k in range(len(register) - 1):\n",
     "                circuit.cx(register[k], register[k+1])\n",
     "            \n",
-    "            #measurement and pauli strings rotation\n",
+    "            measured = rotateAndMeasure(pauliOperator, circuit)\n",
     "\n",
-    "        #Expectation value for pauli strings???\n",
-    "        expectationValue = measureExpectationValue(PauliStrings, standardError, circuit)\n",
+    "        expectationValue = measured\n",
     "        thetaH[theta] = expectationValue\n",
     "        #find newtheta from optimizer\n",
-    "    return thetaH"
+    "    return thetaH\n",
+    "\n",
+    "# backup measeurement algorithm for energy\n",
+    "def measureExpectationValue(array, standardError, circuit):\n",
+    "    totalH = 0.00\n",
+    "    counter = 0\n",
+    "\n",
+    "    #simulation of measurement results\n",
+    "    measurement = ClassicalRegister(len(array))\n",
+    "    circuit.measure(input, measurement)\n",
+    "    simulator = Aer.get_backend('aer_simulator')\n",
+    "\n",
+    "    #runs 1/standard error squared times for standard error given\n",
+    "    simulation = execute(circuit, simulator, shots=(1/standardError)^2)\n",
+    "    mresult = simulation.result()\n",
+    "    counts = mresult.get_counts(circuit)\n",
+    "    for(measured_state, count) in counts.items():\n",
+    "        counter += count\n",
+    "        intM = boolStringToInt(measured_state)\n",
+    "        totalH += intM * count\n",
+    "    #Find expectationValue for given set of Pauli Strings for energies                \n",
+    "    expectationValue = totalH / counter   \n",
+    "    return expectationValue "
    ]
   }
  ],
