--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -18,7 +18,7 @@
     "    integer = 0\n",
     "    for i in range(len(array)):\n",
     "        if (array[i] == \"1\"):\n",
-    "            integer += 2^i\n",
+    "            integer += 2**i\n",
     "    return integer\n",
     "\n",
     "# Measures the expectation value more effeciently by grouping certain Paulis\n",
