added classical methods to main

--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -2,14 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "from qiskit.algorithms.optimizers import COBYLA\n",
+    "from qiskit.algorithms import VQE\n",
+    "from qiskit_nature.algorithms import (GroundStateEigensolver,\n",
+    "                                      NumPyMinimumEigensolverFactory)\n",
+    "from qiskit_nature.drivers import Molecule\n",
+    "from qiskit_nature.drivers.second_quantization import (\n",
+    "    ElectronicStructureMoleculeDriver, ElectronicStructureDriverType)\n",
+    "from qiskit_nature.transformers.second_quantization.electronic import FreezeCoreTransformer\n",
+    "from qiskit_nature.problems.second_quantization import ElectronicStructureProblem\n",
+    "from qiskit_nature.converters.second_quantization import QubitConverter\n",
+    "from qiskit_nature.mappers.second_quantization import ParityMapper\n",
+    "import numpy as np\n",
+    "from qiskit_nature.circuit.library import UCCSD, HartreeFock\n",
+    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.algorithms.optimizers import COBYLA, SPSA, SLSQP\n",
+    "from qiskit.opflow import TwoQubitReduction\n",
+    "from qiskit import BasicAer, Aer\n",
+    "from qiskit.utils import QuantumInstance\n",
+    "from qiskit.utils.mitigation import CompleteMeasFitter\n",
+    "from qiskit.providers.aer.noise import NoiseModel\n",
     "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister, execute, Aer\n",
     "from qiskit.utils import QuantumInstance\n",
     "from qiskit.opflow import PauliExpectation, CircuitSampler, StateFn, X, Y, Z, I, CircuitStateFn \n",
-    "import numpy as np\n",
+    "\n",
+    "#Input:\n",
+    "    #params - numpy array containing parameters to be optimized\n",
+    "#Output:\n",
+    "    #returns a numpy array containing optimized parameters\n",
+    "def optimizeParams(objective_function, params=np.array([])):\n",
+    "    optimizer = COBYLA(maxiter=500, tol=0.0001)\n",
+    "    result = optimizer.minimize(fun=objective_function, x0=params)\n",
+    "    return result.x\n",
+    "\n",
+    "#Input:\n",
+    "    #electrons - number of electrons in simulated molecule\n",
+    "    #orbitals - number of orbitals in simulated molecule. This is also the size of the\n",
+    "    #quantum register initialized\n",
+    "    #circuit - quantum circuit in which the Hartree-Fock state will be initialized\n",
+    "#Outcome:\n",
+    "    #creates a quantum register in the Hartree-Fock state and adds it to the circuit\n",
+    "def getHartreeFockState(electrons, orbitals, circuit):\n",
+    "    register = QuantumRegister(orbitals)\n",
+    "    circuit.add_register(register)\n",
+    "    for i in range(electrons):\n",
+    "        circuit.x(register[i])\n",
+    "    return\n",
     "\n",
     "#function to change bool String to integer\n",
     "def boolStringToInt(array):\n",
