changed VQE function and added summation

--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -83,20 +83,15 @@
     "def VQE(numberOfQubits, theta, standardError, pauliOperator):\n",
     "\n",
     "    #theta is an initial angle\n",
-    "    #epsilon is target standard error \n",
+    "    #target standard error is given to function\n",
+    "    #function should return expectationvalue for single angle\n",
     "    register = QuantumRegister(numberOfQubits)\n",
     "    circuit = QuantumCircuit(register)\n",
+    "    expectationValue = 0.00\n",
     "    \n",
+    "    for i in range(numberOfQubits^4):\n",
     "\n",
-    "    #This b should be true until optimizer reaches some value\n",
-    "    b = False\n",
-    "    while (b):\n",
-    "        thetaH = {}\n",
-    "        for i in range(numberOfQubits^4):\n",
-    "            #dictionary to store theta and expectation energy values\n",
-    "            totalH = 0.00\n",
-    "            numberOfIterations = 0\n",
-    "\n",
+    "        for i in range((1/standardError)^2):\n",
     "            #prepare state function of theta[i]\n",
     "            for qubit in register:\n",
     "                circuit.rx(theta, qubit)\n",
@@ -106,12 +101,11 @@
     "            for k in range(len(register) - 1):\n",
     "                circuit.cx(register[k], register[k+1])\n",
     "            \n",
-    "            measured = rotateAndMeasure(pauliOperator, circuit)\n",
+    "            expectationValue += rotateAndMeasure(pauliOperator, circuit)\n",
+    "            #summation of measurements\n",
     "\n",
-    "        expectationValue = measured\n",
-    "        thetaH[theta] = expectationValue\n",
-    "        #find newtheta from optimizer\n",
-    "    return thetaH\n",
+    "    return expectationValue\n",
+    "\n",
     "\n",
     "# backup measeurement algorithm for energy\n",
     "def measureExpectationValue(array, standardError, circuit):\n",
