--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -81,29 +81,40 @@
     "    return sampler.eval().real  \n",
     "\n",
     "def VQE(numberOfQubits, theta, standardError, pauliOperator):\n",
-    "\n",
     "    #theta is an initial angle\n",
     "    #target standard error is given to function\n",
     "    #function should return expectationvalue for single angle\n",
     "    register = QuantumRegister(numberOfQubits)\n",
     "    circuit = QuantumCircuit(register)\n",
     "    expectationValue = 0.00\n",
+    "    measured = []\n",
+    "    lastMin = 0\n",
+    "    minExp = 1\n",
+    "    while (lastMin < 100):\n",
+    "        for i in range(numberOfQubits^4):\n",
+    "            for i in range((1/standardError)^2):\n",
+    "                #prepare state function of theta[i]\n",
+    "                for qubit in register:\n",
+    "                    circuit.rx(theta, qubit)\n",
+    "                    circuit.ry(theta, qubit)\n",
+    "\n",
+    "                #entangled anzatz states preparation\n",
+    "                for k in range(len(register) - 1):\n",
+    "                    circuit.cx(register[k], register[k+1])\n",
+    "                \n",
+    "                #measures expectation value, adds to list, compares with min\n",
+    "                exp = rotateAndMeasure(pauliOperator, circuit)\n",
+    "                measured.append(exp)\n",
+    "                if exp < minExp:\n",
+    "                    minExp = exp\n",
+    "                    lastMin = 0\n",
+    "                else:\n",
+    "                    lastMin += 1\n",
+    "    #gets rid of all expectation values after the minimum value\n",
+    "    upToMin = measured[:len(measured)-lastMin]\n",
     "    \n",
-    "    for i in range(numberOfQubits^4):\n",
-    "\n",
-    "        for i in range((1/standardError)^2):\n",
-    "            #prepare state function of theta[i]\n",
-    "            for qubit in register:\n",
-    "                circuit.rx(theta, qubit)\n",
-    "                circuit.ry(theta, qubit)\n",
-    "\n",
-    "            #entangled anzatz states preparation\n",
-    "            for k in range(len(register) - 1):\n",
-    "                circuit.cx(register[k], register[k+1])\n",
-    "            \n",
-    "            expectationValue += rotateAndMeasure(pauliOperator, circuit)\n",
-    "            #summation of measurements\n",
-    "\n",
+    "    #adds up the remaining expectation values\n",
+    "    expectationValue = sum(upToMin)\n",
     "    return expectationValue\n",
     "\n",
     "\n",
@@ -133,7 +144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 ('qiskit')",
    "language": "python",
    "name": "python3"
   },
@@ -147,12 +158,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "21cf86d11e40685bdf02511d449aa0705537871041748e4d95aac0bec6ac973f"
+    "hash": "589fdf9d33fa67c297da1e975db83c64ff7368b293bf76e426616abd6fd87742"
    }
   }
  },
