--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -38,37 +38,41 @@
     "    return sampler.eval().real  \n",
     "\n",
     "def VQE(numberOfQubits, theta, standardError, pauliOperator):\n",
-    "\n",
     "    #theta is an initial angle\n",
-    "    #epsilon is target standard error \n",
+    "    #target standard error is given to function\n",
+    "    #function should return expectationvalue for single angle\n",
     "    register = QuantumRegister(numberOfQubits)\n",
     "    circuit = QuantumCircuit(register)\n",
-    "    \n",
-    "\n",
-    "    #This b should be true until optimizer reaches some value\n",
-    "    b = False\n",
-    "    while (b):\n",
-    "        thetaH = {}\n",
+    "    expectationValue = 0.00\n",
+    "    measured = []\n",
+    "    lastMin = 0\n",
+    "    minExp = 1\n",
+    "    while (lastMin < 100):\n",
     "        for i in range(numberOfQubits^4):\n",
-    "            #dictionary to store theta and expectation energy values\n",
-    "            totalH = 0.00\n",
-    "            numberOfIterations = 0\n",
+    "            for i in range((1/standardError)^2):\n",
+    "                #prepare state function of theta[i]\n",
+    "                for qubit in register:\n",
+    "                    circuit.rx(theta, qubit)\n",
+    "                    circuit.ry(theta, qubit)\n",
     "\n",
-    "            #prepare state function of theta[i]\n",
-    "            for qubit in register:\n",
-    "                circuit.rx(theta, qubit)\n",
-    "                circuit.ry(theta, qubit)\n",
-    "\n",
-    "            #entangled anzatz states preparation\n",
-    "            for k in range(len(register) - 1):\n",
-    "                circuit.cx(register[k], register[k+1])\n",
-    "            \n",
-    "            measured = rotateAndMeasure(pauliOperator, circuit)\n",
-    "\n",
-    "        expectationValue = measured\n",
-    "        thetaH[theta] = expectationValue\n",
-    "        #find newtheta from optimizer\n",
-    "    return thetaH\n",
+    "                #entangled anzatz states preparation\n",
+    "                for k in range(len(register) - 1):\n",
+    "                    circuit.cx(register[k], register[k+1])\n",
+    "                \n",
+    "                #measures expectation value, adds to list, compares with min\n",
+    "                exp = rotateAndMeasure(pauliOperator, circuit)\n",
+    "                measured.append(exp)\n",
+    "                if exp < minExp:\n",
+    "                    minExp = exp\n",
+    "                    lastMin = 0\n",
+    "                else:\n",
+    "                    lastMin += 1\n",
+    "    #gets rid of all expectation values after the minimum value\n",
+    "    upToMin = measured[:len(measured)-lastMin]\n",
+    "    \n",
+    "    #adds up the remaining expectation values\n",
+    "    expectationValue = sum(upToMin)\n",
+    "    return expectationValue\n",
     "\n",
     "# backup measeurement algorithm for energy\n",
     "def measureExpectationValue(array, standardError, circuit):\n",
