--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -80,30 +80,43 @@
     "    \n",
     "    return sampler.eval().real  \n",
     "\n",
-    "def VQE(numberOfQubits, theta, standardError, pauliOperator):\n",
-    "\n",
+    "def VQE(electrons, orbitals, theta, standardError, pauliOperator):\n",
     "    #theta is an initial angle\n",
     "    #target standard error is given to function\n",
     "    #function should return expectationvalue for single angle\n",
-    "    register = QuantumRegister(numberOfQubits)\n",
     "    circuit = QuantumCircuit(register)\n",
+    "    getHartreeFockState(electrons, orbitals, circuit)\n",
     "    expectationValue = 0.00\n",
+    "    measured = []\n",
+    "    lastMin = 0\n",
+    "    minExp = 1\n",
+    "    thetalist = [theta]\n",
+    "    while (lastMin < 100):\n",
+    "        for i in range(orbitals^4):\n",
+    "            for i in range((1/standardError)^2):\n",
+    "                #prepare state function of theta[i]\n",
+    "                for qubit in register:\n",
+    "                    circuit.rx(theta, qubit)\n",
+    "                    circuit.ry(theta, qubit)\n",
+    "\n",
+    "                #entangled ansatz states preparation\n",
+    "                for k in range(len(register) - 1):\n",
+    "                    circuit.cx(register[k], register[k+1])\n",
+    "                \n",
+    "                #measures expectation value, adds to list, compares with min\n",
+    "                exp = rotateAndMeasure(pauliOperator, circuit)\n",
+    "                measured.append(exp)\n",
+    "                if exp < minExp:\n",
+    "                    minExp = exp\n",
+    "                    lastMin = 0\n",
+    "                else:\n",
+    "                    lastMin += 1\n",
+    "        #gets rid of all expectation values after the minimum value\n",
+    "        upToMin = measured[:len(measured)-lastMin]\n",
     "    \n",
-    "    for i in range(numberOfQubits^4):\n",
-    "\n",
-    "        for i in range((1/standardError)^2):\n",
-    "            #prepare state function of theta[i]\n",
-    "            for qubit in register:\n",
-    "                circuit.rx(theta, qubit)\n",
-    "                circuit.ry(theta, qubit)\n",
-    "\n",
-    "            #entangled anzatz states preparation\n",
-    "            for k in range(len(register) - 1):\n",
-    "                circuit.cx(register[k], register[k+1])\n",
-    "            \n",
-    "            expectationValue += rotateAndMeasure(pauliOperator, circuit)\n",
-    "            #summation of measurements\n",
-    "\n",
+    "        #adds up the remaining expectation values\n",
+    "        expectationValue = sum(upToMin)\n",
+    "        optimizeParams\n",
     "    return expectationValue\n",
     "\n",
     "\n",
