--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -35,7 +35,7 @@
     "    #params - numpy array containing parameters to be optimized\n",
     "#Output:\n",
     "    #returns a numpy array containing optimized parameters\n",
-    "def optimizeParams(objective_function, params=np.array([])):\n",
+    "def optimizeParams(params=np.array([])):\n",
     "    optimizer = COBYLA(maxiter=500, tol=0.0001)\n",
     "    result = optimizer.minimize(fun=objective_function, x0=params)\n",
     "    return result.x\n",
@@ -133,7 +133,51 @@
     "        totalH += intM * count\n",
     "    #Find expectationValue for given set of Pauli Strings for energies                \n",
     "    expectationValue = totalH / counter   \n",
-    "    return expectationValue "
+    "    return expectationValue \n",
+    "\n",
+    "\n",
+    "\n",
+    "##################################################################################################\n",
+    "#                                     HELPER METHODS BENEATH                                     #\n",
+    "##################################################################################################\n",
+    "\n",
+    "np.random.seed(999999)\n",
+    "p0 = np.random.random()\n",
+    "target_distr = {0: p0, 1: 1-p0}\n",
+    "backend = Aer.get_backend(\"aer_simulator\")\n",
+    "\n",
+    "def get_var_form(params):\n",
+    "    qr = QuantumRegister(1, name=\"q\")\n",
+    "    cr = ClassicalRegister(1, name='c')\n",
+    "    qc = QuantumCircuit(qr, cr)\n",
+    "    qc.u(params[0], params[1], params[2], qr[0])\n",
+    "    qc.measure(qr, cr[0])\n",
+    "    return qc\n",
+    "\n",
+    "\n",
+    "def counts_to_distr(counts):\n",
+    "    \"\"\"Convert Qiskit result counts to dict with integers as\n",
+    "    keys, and pseudo-probabilities as values.\"\"\"\n",
+    "    n_shots = sum(counts.values())\n",
+    "    return {int(k, 2): v/n_shots for k, v in counts.items()}\n",
+    "\n",
+    "\n",
+    "def objective_function(params):\n",
+    "    \"\"\"Compares the output distribution of our circuit with\n",
+    "    parameters `params` to the target distribution.\"\"\"\n",
+    "    # Create circuit instance with paramters and simulate it\n",
+    "    qc = get_var_form(params)\n",
+    "    result = backend.run(qc).result()\n",
+    "    # Get the counts for each measured state, and convert\n",
+    "    # those counts into a probability dict\n",
+    "    output_distr = counts_to_distr(result.get_counts())\n",
+    "    # Calculate the cost as the distance between the output\n",
+    "    # distribution and the target distribution\n",
+    "    cost = sum(\n",
+    "        abs(target_distr.get(i, 0) - output_distr.get(i, 0))\n",
+    "        for i in range(2**qc.num_qubits)\n",
+    "    )\n",
+    "    return cost\n"
    ]
   }
  ],
