--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -80,66 +80,38 @@
     "    \n",
     "    return sampler.eval().real  \n",
     "\n",
-<<<<<<< HEAD
     "def VQE(numberOfQubits, theta, standardError, pauliOperator):\n",
-=======
-    "def VQE(electrons, orbitals, theta, standardError, pauliOperator):\n",
->>>>>>> jason
+    "\n",
     "    #theta is an initial angle\n",
-    "    #target standard error is given to function\n",
-    "    #function should return expectationvalue for single angle\n",
+    "    #epsilon is target standard error \n",
+    "    register = QuantumRegister(numberOfQubits)\n",
     "    circuit = QuantumCircuit(register)\n",
-    "    getHartreeFockState(electrons, orbitals, circuit)\n",
-    "    expectationValue = 0.00\n",
-    "    measured = []\n",
-    "    lastMin = 0\n",
-    "    minExp = 1\n",
-<<<<<<< HEAD
-    "    while (lastMin < 100):\n",
+    "    \n",
+    "\n",
+    "    #This b should be true until optimizer reaches some value\n",
+    "    b = False\n",
+    "    while (b):\n",
+    "        thetaH = {}\n",
     "        for i in range(numberOfQubits^4):\n",
-=======
-    "    thetalist = [theta]\n",
-    "    while (lastMin < 100):\n",
-    "        for i in range(orbitals^4):\n",
->>>>>>> jason
-    "            for i in range((1/standardError)^2):\n",
-    "                #prepare state function of theta[i]\n",
-    "                for qubit in register:\n",
-    "                    circuit.rx(theta, qubit)\n",
-    "                    circuit.ry(theta, qubit)\n",
+    "            #dictionary to store theta and expectation energy values\n",
+    "            totalH = 0.00\n",
+    "            numberOfIterations = 0\n",
     "\n",
-<<<<<<< HEAD
-    "                #entangled anzatz states preparation\n",
-=======
-    "                #entangled ansatz states preparation\n",
->>>>>>> jason
-    "                for k in range(len(register) - 1):\n",
-    "                    circuit.cx(register[k], register[k+1])\n",
-    "                \n",
-    "                #measures expectation value, adds to list, compares with min\n",
-    "                exp = rotateAndMeasure(pauliOperator, circuit)\n",
-    "                measured.append(exp)\n",
-    "                if exp < minExp:\n",
-    "                    minExp = exp\n",
-    "                    lastMin = 0\n",
-    "                else:\n",
-    "                    lastMin += 1\n",
-<<<<<<< HEAD
-    "    #gets rid of all expectation values after the minimum value\n",
-    "    upToMin = measured[:len(measured)-lastMin]\n",
-    "    \n",
-    "    #adds up the remaining expectation values\n",
-    "    expectationValue = sum(upToMin)\n",
-=======
-    "        #gets rid of all expectation values after the minimum value\n",
-    "        upToMin = measured[:len(measured)-lastMin]\n",
-    "    \n",
-    "        #adds up the remaining expectation values\n",
-    "        expectationValue = sum(upToMin)\n",
-    "        optimizeParams\n",
->>>>>>> jason
-    "    return expectationValue\n",
+    "            #prepare state function of theta[i]\n",
+    "            for qubit in register:\n",
+    "                circuit.rx(theta, qubit)\n",
+    "                circuit.ry(theta, qubit)\n",
     "\n",
+    "            #entangled anzatz states preparation\n",
+    "            for k in range(len(register) - 1):\n",
+    "                circuit.cx(register[k], register[k+1])\n",
+    "            \n",
+    "            measured = rotateAndMeasure(pauliOperator, circuit)\n",
+    "\n",
+    "        expectationValue = measured\n",
+    "        thetaH[theta] = expectationValue\n",
+    "        #find newtheta from optimizer\n",
+    "    return thetaH\n",
     "\n",
     "# backup measeurement algorithm for energy\n",
     "def measureExpectationValue(array, standardError, circuit):\n",
@@ -211,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('qiskit')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -225,12 +197,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "589fdf9d33fa67c297da1e975db83c64ff7368b293bf76e426616abd6fd87742"
+    "hash": "21cf86d11e40685bdf02511d449aa0705537871041748e4d95aac0bec6ac973f"
    }
   }
  },
