--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -47,9 +47,7 @@
     "    #circuit - quantum circuit in which the Hartree-Fock state will be initialized\n",
     "#Outcome:\n",
     "    #creates a quantum register in the Hartree-Fock state and adds it to the circuit\n",
-    "def getHartreeFockState(electrons, orbitals, circuit):\n",
-    "    register = QuantumRegister(orbitals)\n",
-    "    circuit.add_register(register)\n",
+    "def getHartreeFockState(electrons, circuit, register):\n",
     "    for i in range(electrons):\n",
     "        circuit.x(register[i])\n",
     "    return\n",
@@ -80,38 +78,45 @@
     "    \n",
     "    return sampler.eval().real  \n",
     "\n",
-    "def VQE(numberOfQubits, theta, standardError, pauliOperator):\n",
-    "\n",
+    "def VQE(electrons, orbitals, theta, standardError, pauliOperator):\n",
     "    #theta is an initial angle\n",
-    "    #epsilon is target standard error \n",
-    "    register = QuantumRegister(numberOfQubits)\n",
+    "    #target standard error is given to function\n",
+    "    #function should return expectationvalue for single angle\n",
+    "    register = QuantumRegister(orbitals)\n",
     "    circuit = QuantumCircuit(register)\n",
+    "    getHartreeFockState(electrons, circuit, register)\n",
+    "    expectationValue = 0.00\n",
+    "    measured = []\n",
+    "    lastMin = 0\n",
+    "    minExp = 1\n",
+    "    thetalist = [theta]\n",
+    "    while (lastMin < 100):\n",
+    "        for i in range(orbitals^4):\n",
+    "            for i in range((1/standardError)^2):\n",
+    "                #prepare state function of theta[i]\n",
+    "                for qubit in register:\n",
+    "                    circuit.rx(theta, qubit)\n",
+    "                    circuit.ry(theta, qubit)\n",
+    "\n",
+    "                #entangled ansatz states preparation\n",
+    "                for k in range(len(register) - 1):\n",
+    "                    circuit.cx(register[k], register[k+1])\n",
+    "                \n",
+    "                #measures expectation value, adds to list, compares with min\n",
+    "                exp = rotateAndMeasure(pauliOperator, circuit)\n",
+    "                measured.append(exp)\n",
+    "                if exp < minExp:\n",
+    "                    minExp = exp\n",
+    "                    lastMin = 0\n",
+    "                else:\n",
+    "                    lastMin += 1\n",
+    "        #gets rid of all expectation values after the minimum value\n",
+    "        upToMin = measured[:len(measured)-lastMin]\n",
     "    \n",
-    "\n",
-    "    #This b should be true until optimizer reaches some value\n",
-    "    b = False\n",
-    "    while (b):\n",
-    "        thetaH = {}\n",
-    "        for i in range(numberOfQubits^4):\n",
-    "            #dictionary to store theta and expectation energy values\n",
-    "            totalH = 0.00\n",
-    "            numberOfIterations = 0\n",
-    "\n",
-    "            #prepare state function of theta[i]\n",
-    "            for qubit in register:\n",
-    "                circuit.rx(theta, qubit)\n",
-    "                circuit.ry(theta, qubit)\n",
-    "\n",
-    "            #entangled anzatz states preparation\n",
-    "            for k in range(len(register) - 1):\n",
-    "                circuit.cx(register[k], register[k+1])\n",
-    "            \n",
-    "            measured = rotateAndMeasure(pauliOperator, circuit)\n",
-    "\n",
-    "        expectationValue = measured\n",
-    "        thetaH[theta] = expectationValue\n",
-    "        #find newtheta from optimizer\n",
-    "    return thetaH\n",
+    "        #adds up the remaining expectation values\n",
+    "        expectationValue = sum(upToMin)\n",
+    "        optimizeParams\n",
+    "    return expectationValue\n",
     "\n",
     "# backup measeurement algorithm for energy\n",
     "def measureExpectationValue(array, standardError, circuit):\n",
