--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'qiskit_nature'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\JasonQin\\Documents\\GitHub\\Variational-Quantum-Eigensolver\\qiskit code (Python)\\main.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/JasonQin/Documents/GitHub/Variational-Quantum-Eigensolver/qiskit%20code%20%28Python%29/main.ipynb#ch0000000?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39malgorithms\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moptimizers\u001b[39;00m \u001b[39mimport\u001b[39;00m COBYLA\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/JasonQin/Documents/GitHub/Variational-Quantum-Eigensolver/qiskit%20code%20%28Python%29/main.ipynb#ch0000000?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39malgorithms\u001b[39;00m \u001b[39mimport\u001b[39;00m VQE\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/JasonQin/Documents/GitHub/Variational-Quantum-Eigensolver/qiskit%20code%20%28Python%29/main.ipynb#ch0000000?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit_nature\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39malgorithms\u001b[39;00m \u001b[39mimport\u001b[39;00m (GroundStateEigensolver,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/JasonQin/Documents/GitHub/Variational-Quantum-Eigensolver/qiskit%20code%20%28Python%29/main.ipynb#ch0000000?line=4'>5</a>\u001b[0m                                       NumPyMinimumEigensolverFactory)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/JasonQin/Documents/GitHub/Variational-Quantum-Eigensolver/qiskit%20code%20%28Python%29/main.ipynb#ch0000000?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit_nature\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdrivers\u001b[39;00m \u001b[39mimport\u001b[39;00m Molecule\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/JasonQin/Documents/GitHub/Variational-Quantum-Eigensolver/qiskit%20code%20%28Python%29/main.ipynb#ch0000000?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit_nature\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdrivers\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msecond_quantization\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/JasonQin/Documents/GitHub/Variational-Quantum-Eigensolver/qiskit%20code%20%28Python%29/main.ipynb#ch0000000?line=7'>8</a>\u001b[0m     ElectronicStructureMoleculeDriver, ElectronicStructureDriverType)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'qiskit_nature'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from qiskit.algorithms.optimizers import COBYLA\n",
@@ -69,7 +81,7 @@
     "    state = stateFunc\n",
     "    state = CircuitStateFn(state)\n",
     "    \n",
-    "    backend = Aer.get_backend('qasm_simulator') \n",
+    "    backend = Aer.get_backend('aer_simulator') \n",
     "    qInstance = QuantumInstance(backend, shots=1024)\n",
     "    measurableExp = StateFn(op, is_measurement=True).compose(state) \n",
     "    \n",
@@ -78,10 +90,10 @@
     "    \n",
     "    return sampler.eval().real  \n",
     "\n",
-    "def VQE(electrons, orbitals, theta, standardError, pauliOperator):\n",
-    "    #theta is an initial angle\n",
+    "def VQE(electrons, orbitals, standardError, thetaArray, pauliOperator):\n",
+    "    #thetaArray has orbitals rows and 2 columns\n",
     "    #target standard error is given to function\n",
-    "    #function should return expectationvalue for single angle\n",
+    "    #function should return expectationvalue for array of angles\n",
     "    register = QuantumRegister(orbitals)\n",
     "    circuit = QuantumCircuit(register)\n",
     "    getHartreeFockState(electrons, circuit, register)\n",
@@ -89,14 +101,14 @@
     "    measured = []\n",
     "    lastMin = 0\n",
     "    minExp = 1\n",
-    "    thetalist = [theta]\n",
+    "    \n",
     "    while (lastMin < 100):\n",
-    "        for i in range(orbitals^4):\n",
-    "            for i in range((1/standardError)^2):\n",
+    "        for i in range(orbitals**4):\n",
+    "            for i in range(round((1/standardError)**2.0)):\n",
     "                #prepare state function of theta[i]\n",
-    "                for qubit in register:\n",
-    "                    circuit.rx(theta, qubit)\n",
-    "                    circuit.ry(theta, qubit)\n",
+    "                for i in range(orbitals):\n",
+    "                    circuit.rx(thetaArray[i, 0], register[i])\n",
+    "                    circuit.ry(thetaArray[i, 1], register[i])\n",
     "\n",
     "                #entangled ansatz states preparation\n",
     "                for k in range(len(register) - 1):\n",
@@ -115,7 +127,7 @@
     "    \n",
     "        #adds up the remaining expectation values\n",
     "        expectationValue = sum(upToMin)\n",
-    "        optimizeParams\n",
+    "        thetaArray = optimizeParams(thetaArray)\n",
     "    return expectationValue\n",
     "\n",
     "# backup measeurement algorithm for energy\n",
@@ -182,13 +194,13 @@
     "        abs(target_distr.get(i, 0) - output_distr.get(i, 0))\n",
     "        for i in range(2**qc.num_qubits)\n",
     "    )\n",
-    "    return cost\n"
+    "    return cost"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 ('qiskit')",
    "language": "python",
    "name": "python3"
   },
@@ -202,12 +214,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "21cf86d11e40685bdf02511d449aa0705537871041748e4d95aac0bec6ac973f"
+    "hash": "0e8ee1bfc22b241971bae03eb2420b54f3c827e4dd6a7e9eeb84c31f2baf8c38"
    }
   }
  },
