made and ran test case

--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -79,7 +79,7 @@
     "    return sampler.eval().real  \n",
     "\n",
     "def VQE(electrons, orbitals, standardError, thetaArray, pauliOperator):\n",
-    "    #thetaArray has orbitals rows and 2 columns\n",
+    "    #thetaArray has orbitals*2 rows\n",
     "    #target standard error is given to function\n",
     "    #function should return expectationvalue for array of angles\n",
     "    register = QuantumRegister(orbitals)\n",
@@ -91,12 +91,12 @@
     "    minExp = 1\n",
     "    \n",
     "    while (lastMin < 100):\n",
-    "        for i in range(orbitals**4):\n",
-    "            for i in range(round((1/standardError)**2.0)):\n",
+    "        for j in range(orbitals**4):\n",
+    "            for l in range(round((1/standardError)**2.0)):\n",
     "                #prepare state function of theta[i]\n",
     "                for i in range(orbitals):\n",
-    "                    circuit.rx(thetaArray[i, 0], register[i])\n",
-    "                    circuit.ry(thetaArray[i, 1], register[i])\n",
+    "                    circuit.rx(thetaArray[2*i], register[i])\n",
+    "                    circuit.ry(thetaArray[2*i+1], register[i])\n",
     "\n",
     "                #entangled ansatz states preparation\n",
     "                for k in range(len(register) - 1):\n",
