--- a/qiskit code (Python)/main.ipynb
+++ b/qiskit code (Python)/main.ipynb
@@ -29,7 +29,8 @@
     "from qiskit.providers.aer.noise import NoiseModel\n",
     "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister, execute, Aer\n",
     "from qiskit.utils import QuantumInstance\n",
-    "from qiskit.opflow import PauliExpectation, CircuitSampler, StateFn, X, Y, Z, I, CircuitStateFn \n",
+    "from qiskit.opflow import PauliExpectation, CircuitSampler, StateFn, X, Y, Z, I, CircuitStateFn\n",
+    "from qiskit import IBMQ \n",
     "\n",
     "#Input:\n",
     "    #params - numpy array containing parameters to be optimized\n",
@@ -93,8 +94,10 @@
     "    while (lastMin < 100):\n",
     "        for j in range(orbitals**4):\n",
     "            for l in range(round((1/standardError)**2.0)):\n",
+    "                print(l)\n",
     "                #prepare state function of theta[i]\n",
     "                for i in range(orbitals):\n",
+    "                    # print(i)\n",
     "                    circuit.rx(thetaArray[2*i], register[i])\n",
     "                    circuit.ry(thetaArray[2*i+1], register[i])\n",
     "\n",
@@ -110,12 +113,16 @@
     "                    lastMin = 0\n",
     "                else:\n",
     "                    lastMin += 1\n",
+    "            print(\"\\n\")\n",
+    "            print(j)\n",
     "        #gets rid of all expectation values after the minimum value\n",
     "        upToMin = measured[:len(measured)-lastMin]\n",
     "    \n",
     "        #adds up the remaining expectation values\n",
     "        expectationValue = sum(upToMin)\n",
     "        thetaArray = optimizeParams(thetaArray)\n",
+    "        print(\"\\n\")\n",
+    "        print(lastMin)\n",
     "    return expectationValue\n",
     "\n",
     "# backup measeurement algorithm for energy\n",
@@ -126,7 +133,7 @@
     "    #simulation of measurement results\n",
     "    measurement = ClassicalRegister(len(array))\n",
     "    circuit.measure(input, measurement)\n",
-    "    simulator = Aer.get_backend('aer_simulator')\n",
+    "    simulator = provider.get_backend('simulator_stabilizer')\n",
     "\n",
     "    #runs 1/standard error squared times for standard error given\n",
     "    simulation = execute(circuit, simulator, shots=(1/standardError)^2)\n",
@@ -149,7 +156,8 @@
     "np.random.seed(999999)\n",
     "p0 = np.random.random()\n",
     "target_distr = {0: p0, 1: 1-p0}\n",
-    "backend = Aer.get_backend(\"aer_simulator\")\n",
+    "provider = IBMQ.load_account()\n",
+    "backend = provider.get_backend('simulator_stabilizer')\n",
     "\n",
     "def get_var_form(params):\n",
     "    qr = QuantumRegister(1, name=\"q\")\n",
